--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,17 @@
   "description": "ProductMeasurementUnitStorage module",
   "license": "proprietary",
   "require": {
+    "php": ">=7.1",
+    "spryker/event-behavior": "^0.1.0",
+    "spryker/kernel": "^3.17.0",
+    "spryker/product-measurement-unit": "^0.1.0",
+    "spryker/storage": "^3.0.0",
+    "spryker/synchronization": "^0.2.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
+    "spryker/event": "*",
+    "spryker/propel-orm": "*",
     "spryker/testify": "*"
   },
   "autoload": {
@@ -17,6 +25,10 @@
     "psr-4": {
       "SprykerTest\\": "tests/SprykerTest/"
     }
+  },
+  "suggest": {
+    "spryker/event": "If you want to use Event plugins: ^2.1.0",
+    "spryker/propel-orm": "If you want to use transaction functionality: ^1.3.0"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
