--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "php": ">=7.1",
     "spryker/event-behavior": "^1.1.0",
     "spryker/kernel": "^3.21.0",
-    "spryker/product-measurement-unit": "^1.0.0",
+    "spryker/product-measurement-unit": "^1.0.1",
     "spryker/storage": "^3.0.0",
-    "spryker/synchronization": "^0.2.0 || ^1.0.0"
+    "spryker/synchronization": "^0.2.0 || ^1.0.0",
+    "spryker/synchronization-extension": "^1.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
