--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
   "require-dev": {
     "spryker/code-sniffer": "*",
     "spryker/event": "*",
+    "spryker/product": "*",
+    "spryker/propel": "*",
     "spryker/propel-orm": "*",
+    "spryker/queue": "*",
     "spryker/testify": "*"
   },
   "suggest": {
