--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "spryker/product-measurement-unit": "^1.0.1 || ^2.0.0",
     "spryker/quick-order-extension": "^1.0.0",
     "spryker/storage": "^3.0.0",
-    "spryker/synchronization": "^0.2.0 || ^1.0.0",
+    "spryker/synchronization": "^1.3.0",
     "spryker/synchronization-extension": "^1.0.0"
   },
   "require-dev": {
