--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "spryker/event-behavior": "^1.8.0",
     "spryker/kernel": "^3.37.0",
     "spryker/product-measurement-unit": "^1.1.0 || ^2.2.0 || ^4.0.0 || ^5.0.0",
+    "spryker/propel-orm": "^1.5.0",
     "spryker/quick-order-extension": "^1.0.0",
     "spryker/storage": "^3.0.0",
     "spryker/synchronization": "^0.2.0 || ^1.0.0",
@@ -20,13 +21,11 @@
     "spryker/event": "*",
     "spryker/product": "*",
     "spryker/propel": "*",
-    "spryker/propel-orm": "*",
     "spryker/queue": "*",
     "spryker/testify": "*"
   },
   "suggest": {
-    "spryker/event": "If you want to use Event plugins: ^2.1.0",
-    "spryker/propel-orm": "If you want to use transaction functionality: ^1.3.0"
+    "spryker/event": "If you want to use Event plugins: ^2.1.0"
   },
   "autoload": {
     "psr-4": {
