TE-4815 update compose json of product measurement unit storage

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "spryker/event": "*",
     "spryker/product": "*",
     "spryker/propel": "*",
-    "spryker/propel-orm": "^1.5.0",
+    "spryker/propel-orm": "*",
     "spryker/queue": "*",
     "spryker/testify": "*"
   },
