--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   },
   "suggest": {
     "spryker/event": "If you want to use Event plugins: ^2.1.0",
-    "spryker/propel-orm": "If you want to use transaction functionality, minimum required version: 1.3.0"
+    "spryker/propel-orm": "If you want to use transaction functionality: ^1.3.0"
   },
   "autoload": {
     "psr-4": {
