--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,12 @@
     "require-dev": {
         "spryker/code-sniffer": "*",
         "spryker/event": "*",
-        "spryker/product": "*",
+        "spryker/product-storage": "*",
         "spryker/propel": "*",
         "spryker/propel-orm": "*",
+        "spryker/publisher": "*",
         "spryker/queue": "*",
+        "spryker/ramsey-uuid": "*",
         "spryker/testify": "*"
     },
     "suggest": {
