--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
         "spryker/product-measurement-unit": "^1.1.0 || ^2.2.0 || ^4.0.0 || ^5.0.0",
         "spryker/quick-order-extension": "^1.0.0",
         "spryker/storage": "^3.0.0",
+        "spryker/store": "^1.4.0",
         "spryker/synchronization": "^0.2.0 || ^1.0.0",
         "spryker/synchronization-behavior": "^1.0.0",
         "spryker/synchronization-extension": "^1.1.0",
+        "spryker/transfer": "^3.25.0",
         "spryker/util-encoding": "^1.0.0 || ^2.0.0"
     },
     "require-dev": {
