TE-10574 Fix up phpstan config (#9063)
* TE-10574 Fix up phpstan config

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,5 @@
 parameters:
+    level: 6
     checkMissingIterableValueType: false
     ignoreErrors:
         - '#Parameter \#1 \$data of method .+SpyProductMeasurementUnitStorageEntityTransfer::setData\(\) expects string\|null, array\<string, mixed\> given.#'
