--- a/tests/SprykerTest/Zed/ProductMeasurementUnitStorage/codeception.yml
+++ b/tests/SprykerTest/Zed/ProductMeasurementUnitStorage/codeception.yml
@@ -4,7 +4,7 @@ paths:
     tests: .
     data: ../../../_data
     support: _support
-    log: ../../../_output
+    output: ../../../_output
 
 coverage:
     enabled: true
@@ -14,7 +14,7 @@ coverage:
 suites:
     Persistence:
         path: Persistence
-        class_name: ProductMeasurementUnitStoragePersistenceTester
+        actor: ProductMeasurementUnitStoragePersistenceTester
         modules:
             enabled:
                 - \SprykerTest\Shared\Testify\Helper\Environment
