--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,7 @@
     },
     "require-dev": {
         "spryker/code-sniffer": "*",
-        "spryker/event": "*",
-        "spryker/product-storage": "*",
-        "spryker/propel": "*",
-        "spryker/publisher": "*",
-        "spryker/queue": "*",
-        "spryker/ramsey-uuid": "*",
-        "spryker/testify": "*"
+        "spryker/event": "*"
     },
     "suggest": {
         "spryker/event": "If you want to use Event plugins: ^2.1.0",
@@ -36,16 +30,11 @@
             "Spryker\\": "src/Spryker/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "SprykerTest\\": "tests/SprykerTest/"
-        }
-    },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
-        "cs-check": "phpcs -p -s --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/ tests/",
-        "cs-fix": "phpcbf -p --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/ tests/"
+        "cs-check": "phpcs -p -s --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/",
+        "cs-fix": "phpcbf -p --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/"
     },
     "extra": {
         "branch-alias": {
