--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,20 @@
         "spryker/event-behavior": "^1.8.0",
         "spryker/kernel": "^3.37.0",
         "spryker/product-measurement-unit": "^1.1.0 || ^2.2.0 || ^4.0.0 || ^5.0.0",
+        "spryker/product-storage-extension": "^1.0.0",
         "spryker/quick-order-extension": "^1.0.0",
         "spryker/storage": "^3.0.0",
         "spryker/store": "^1.4.0",
         "spryker/synchronization": "^0.2.0 || ^1.0.0",
         "spryker/synchronization-behavior": "^1.0.0",
         "spryker/synchronization-extension": "^1.1.0",
-        "spryker/transfer": "^3.25.0",
+        "spryker/transfer": "^3.27.0",
         "spryker/util-encoding": "^1.0.0 || ^2.0.0"
     },
     "require-dev": {
         "spryker/code-sniffer": "*",
-        "spryker/event": "*"
+        "spryker/event": "*",
+        "spryker/testify": "*"
     },
     "suggest": {
         "spryker/event": "If you want to use Event plugins: ^2.1.0",
@@ -30,11 +32,16 @@
             "Spryker\\": "src/Spryker/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "SprykerTest\\": "tests/SprykerTest/"
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
-        "cs-check": "phpcs -p -s --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/",
-        "cs-fix": "phpcbf -p --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/"
+        "cs-check": "phpcs -p -s --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/ tests/",
+        "cs-fix": "phpcbf -p --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/ tests/"
     },
     "extra": {
         "branch-alias": {
